cmake_minimum_required( VERSION 3.7.1 )

project( lib_jm )


JMSD_SHOW_PROJECT_GROUP_HEADER()


add_subdirectory( jmsd_natibase_libs )

# add_subdirectory( jmsd_cppunit_lib )
# add_subdirectory( jmsd_cppunitlite_lib )

# add_subdirectory( jmsd_cule_lib )
# add_subdirectory( jmsd_nutfield_lib )
# add_subdirectory( jmsd_cutflower_lib )


JMSD_SHOW_PROJECT_GROUP_FOOTER()
